environments/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-dashboard-service
  namespace: dev

spec:
  selector:
    app: devops-dashboard

  ports:
  - port: 80
    targetPort: 3000

  type: ClusterIP
