environments/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: devops-dashboard-ingress
  namespace: dev

spec:
  ingressClassName: nginx

  rules:
  - host: dashboard.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-dashboard-service
            port:
              number: 80
